--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,34 +16,70 @@ nav {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 /* unvisited link */
-a:link {
+nav:link {
     color: gray;
     text-decoration: none;
   }
   
   /* visited link */
-a:visited {
+nav:visited {
     color:navy;
     text-decoration: none;
   }
   
   /* mouse over link */
-a:hover {
+nav:hover {
     color:#4aaaa5;
     text-decoration: none;
   }
+.pImage .text {
+    position: absolute;
+    visibility: hidden;
+}
+.pImage:hover .text{
+    position: relative;
+    width: 100%;
+    height: 30%;
+    float: left;
+    opacity: 0.9;
+    visibility: visible;
+    padding-bottom: 70px;
+    margin: 25px;
+    padding-top: 70px;
+    color: white;
+    bottom: 230px; 
+    left: -25px;
+    text-align: center;
+    background-color: rebeccapurple;
+    color: white;
+    font-family:'Fontdiner Swanky';
+    font: bolder;
 
+}
+
+
+
+}
+.text {
+    background-color: rebeccapurple;
+    color: white;
+    font-size: 16px;
+    
+
+  }
 #yourName{
-    font-size: 25px;
-    font-weight: bold;
-    background-color: #4aaaa5;
+    font-size: 30px;
+    font-weight: bolder;
+    background-color: rebeccapurple;
     color: white;
     position: absolute;
     left: 0;
     width: auto;
     height: auto;
-    top: -4.2em;
-    padding: 1em;
+    top: -3.5em;
+    padding: 16px 30px 16px 30px;
+    font-family: 'Fontdiner Swanky';
+    text-transform: uppercase;
 }
 #mainBox {
     width: 960px;
@@ -57,15 +93,13 @@ a:hover {
   }
 #heading {
     width: 900px;
-    /* float: left; */
-    
-    color: #4aaaa5;
+    font-family: 'Fontdiner Swanky';
+    color: rebeccapurple;
     font-weight: bold;
     font-size: 25px;
     border-bottom-color:lightgray;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    /* padding-left: 20px; */
     padding-bottom: 20px;
     padding-top: 20px;
     margin-left: 20px;
@@ -81,9 +115,11 @@ a:hover {
     padding-right: 25px;
 }
 #myPic {
-    padding: 25px;
+
     float: left;
-}
+    margin: 25px;
+    border-radius: 20px;
+    }
 #footer {
     position: fixed;
     left: 0;
@@ -94,7 +130,7 @@ a:hover {
     text-align: center;
     font-size: 10px;
     padding-top: 25px;
-    border-top-color:#4aaaa5;
+    border-top-color:rebeccapurple;
     border-top-style: solid;
     border-top-width: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -110,10 +146,11 @@ a:hover {
 
 .projectName {
     position: absolute;
-    width: 91%;
-    background-color: #4aaaa5;
+    width: 88.9%;
+    background-color: rebeccapurple;
+    font-family: 'Fontdiner Swanky';
     color: white;
-    bottom: 0px;
+    bottom: 0;
     left: 0;
     font-size: 18px;
     text-align: center;
@@ -137,7 +174,7 @@ a:hover {
     margin-bottom: 40px;
   }
   input[type=submit] {
-    background-color: #4aaaa5;
+    background-color: rebeccapurple;
     border: none;
     color: white;
     text-decoration: none;
