--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,6 @@ nav:hover {
 
 }
 
-
-
 }
 .text {
     background-color: rebeccapurple;
@@ -118,7 +116,7 @@ nav:hover {
 
     float: left;
     margin: 25px;
-    border-radius: 20px;
+    filter: drop-shadow(8px 8px 10px rebeccapurple);
     }
 #footer {
     position: fixed;
